# py_uv_2048

./: README.md  database.py  game2048.db  main.py  pyproject.toml  test.db
static/: # Code Citations.md  script.js  style.css
templates/: index.html
